# BiliTraceC

./: README.md  cracker.h  history_api.c  main.c  network.c  proto_parser.c  utils.h
BiliTraceC/: .gitignore  CMakeLists.txt  Makefile  README.md  bilitrace_local.c  build.bat  build.sh  check_zlib.c  collision_results.txt  cracker.c  cracker.h  crc32_core.h  find_all_collisions.c  find_all_collisions.py  history_api.c  history_api.h  main.c  mitm_cracker.c  mitm_cracker.h  mitm_cracker_helper.c  proto_parser.h  test_crc.c  test_curl.c  test_mitm.c
BiliTraceC/cache/34564016127/: 2026-01-01.pb
BiliTraceC/cache/34854864342/: 2026-01-01.pb
BiliTraceC/cache/34983644379/: 2026-01-01.pb  2026-01-02.pb  2026-01-03.pb  2026-01-04.pb  2026-01-05.pb  2026-01-06.pb  2026-01-07.pb  2026-01-08.pb  2026-01-09.pb  2026-01-10.pb  2026-01-11.pb  2026-01-12.pb  2026-01-13.pb  2026-01-14.pb  2026-01-15.pb
BiliTraceC/cache/35151610084/: 2026-01-03.pb  2026-01-04.pb  2026-01-05.pb  2026-01-06.pb  2026-01-07.pb  2026-01-08.pb  2026-01-09.pb
BiliTraceC/cache/35155215313/: 2026-01-03.pb  2026-01-04.pb  2026-01-05.pb  2026-01-06.pb  2026-01-07.pb  2026-01-08.pb  2026-01-09.pb  2026-01-10.pb  2026-01-11.pb
BiliTraceC/cache/35298871296/: 2026-01-10.pb  2026-01-11.pb  2026-01-12.pb  2026-01-13.pb  2026-01-14.pb  2026-01-15.pb  2026-01-16.pb
BiliTraceC/cache/35390032260/: 2026-01-15.pb  2026-01-16.pb
BiliTraceC/docs/: AI_CONTEXT.md  BUG_ANALYSIS.md  MITM_ATTACK.md  USER_GUIDE.md
BiliTraceC/include/: network.h
BiliTraceC/scripts/: analyze_uid_prefixes.py  build_uid_whitelist.py  match_whitelist.py
BiliTraceC/src/: cracker.c  history_api.c  main.c  mitm_cracker.c  network.c
